--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,10 @@ name = "sudoku"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+lto = "fat"
+codegen-units = 1
+panic = "abort"
 
 [dependencies]
-itertools = "0.10.1"
 rayon = "1.5.1"
